--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li><a href="https://www.linkedin.com/in/giovanni-rozatti/">LinkedIn</li>
 					<li><a href="https://github.com/VonIgnia">GitHub</li>
 
-					<li><a href="#">Currículo</a></li>
+					<li><a href="assets/PDF.pdf">Currículo</a></li>
 					<li><a href="#">Projetos</a></li>
 
 				</ul>
